<resources>
    <string name="app_name">UULib</string>

    <string name="main_indicator_home">首页</string>
    <string name="main_indicator_arrange_finance">理财</string>
    <string name="main_indicator_market">商城</string>
    <string name="main_indicator_information">互动</string>
    <string name="main_indicator_mine">我的</string>
    <string name="please_input_tel_num">请输入手机号</string>
    <string name="next_step">下一步</string>
    <string name="tel_num">手机号</string>
    <string name="arrange_finance_title">投资专区</string>
    <string name="login_title">登录</string>
    <string name="login_pwd">登录密码</string>
    <string name="login">登录</string>
    <string name="switch_account_or_register">切换账号或注册</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="please_input_login_pwd">请输入登录密码</string>
    <string name="identification_title">实名认证</string>
    <string name="set_pwd_tip">6-16位，至少包含数字，字母或符号中的两种</string>
    <string name="set_trading_pwd_tip">设置支付密码，6位纯数字</string>
    <string name="ensure">确认</string>
    <string name="new_password">新密码</string>
    <string name="confirm_code">验证码</string>
    <string name="phone_num">手机号</string>
    <string name="please_input_confirm_code">请输入验证码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="please_input_confirm_code_pwd">请输入短信验证码和密码完成注册</string>
    <string name="verification_code">验证码</string>
    <string name="set_pwd">设置密码</string>
    <string name="pwd_rule">密码区分大小写，建议使用6位以上数字、字母组合</string>
    <string name="invite_code">邀请码</string>
    <string name="register_login">立即注册</string>
    <string name="register_rule">点击“立即注册”，即表示您同意</string>
    <string name="uulicai_agreement">《利投网用户协议》</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="regist_title">注册</string>
    <string name="please_input_invite_code">请输入推荐人手机号码(选填)</string>
    <string name="title_forget_pwd">忘记密码</string>
    <string name="retrieve_login_pwd">修改密码</string>
    <string name="title_new_bid_prefecture">新手专区</string>
    <string name="title_activity_bid_prefecture">活动专区</string>
    <string name="title_u_series_prefecture">利投宝</string>
    <string name="title_project_detail">项目详情</string>
    <string name="earnings_rate">预期年化收益率</string>
    <string name="expect_earnings_rate">预期收益（元）</string>
    <string name="loan_term">借款期限</string>
    <string name="loan_agreement">相关投资协议</string>
    <string name="remaining_can_be_cast">剩余可投</string>
    <string name="total_amount_of_borrowing">借款总额:</string>
    <string name="investment_amount">起投金额:</string>
    <string name="confirm_recharge">确认充值</string>
    <string name="all_transactions">全部交易</string>
    <string name="withdraw_record">提现记录</string>
    <string name="recharge_record">充值记录</string>
    <string name="invest_record">投资记录</string>
    <string name="participate">招标中</string>
    <string name="investment">还款中</string>
    <string name="paid_back">已还款</string>
    <string name="safety_guarantee">安全保障</string>
    <string name="data_and_img">资料图片</string>
    <string name="project_introduce">项目介绍</string>
    <string name="on_the_time">上标时间:</string>
    <string name="interest_of_time">起息时间:</string>
    <string name="mode_of_repayment">还款方式:</string>
    <string name="quick_invest_biao">立即投标</string>
    <string name="has_bean_payment">已还款</string>
    <string name="paymenting">还款中</string>
    <string name="bid_full">已满标</string>
    <string name="right_invest">立即投资</string>
    <string name="user">用户</string>
    <string name="invest_amount_yuan">投资金额(元)</string>
    <string name="time">时间</string>
    <string name="title_invest_record">投资记录</string>
    <string name="title_invest_result">投资结果</string>
    <string name="available_balance">可用余额(元)</string>
    <string name="withdraw">提现</string>
    <string name="recharge">充值</string>
    <string name="invest">投资</string>
    <string name="invest_amount_without_colon">投资金额</string>
    <string name="security_settings">安全设置</string>
    <string name="my_welfare">我的优惠券</string>
    <string name="my_ticket">我的加息券</string>
    <string name="date_of_payment">回款日历</string>
    <string name="my_invest">我的投资</string>
    <string name="my_invest_detail_repayment_date">回款日期</string>
    <string name="my_invest_detail_repayment_type">还款方式</string>
    <string name="my_invest_detail_loan_agreement">相关投资协议</string>
    <string name="my_invest_detail_red_package_used">红包使用</string>
    <string name="my_invest_detail_red_ticket_used">加息券使用</string>
    <string name="financial_details">资金明细</string>
    <string name="please_login_first">请先登录账户</string>
    <string name="title_personal_data">个人资料</string>
    <string name="title_financial_detail">资金明细</string>
    <string name="title_my_invest">我的投资</string>
    <string name="title_payment_schedule">回款日程</string>
    <string name="title_my_welfare">我的优惠券</string>
    <string name="title_recharge_limit_introduct">限额</string>
    <string name="title_security_setting">安全设置</string>
    <string name="title_recharge">充值</string>
    <string name="title_withdraw">提现</string>
    <string name="title_bind_bank_card">绑定银行卡</string>
    <string name="recharge_amount">充值金额:</string>
    <string name="at_least_100_yuan">手续费为提现金额的0.03%,最低5元</string>
    <string name="recharge_at_least_100_yuan">100元起充</string>
    <string name="yuan_no">元</string>
    <string name="please_input_recharge_amount">请输入充值金额</string>
    <string name="recharge_amount_least_one_hundred">充值金额至少100元</string>
    <string name="withdraw_amount">提现金额 :</string>
    <string name="trading_psd">支付密码</string>
    <string name="current_version">当前版本</string>
    <string name="about_us">关于我们</string>
    <string name="has_bean_logout">已退出登录</string>
    <string name="title_set_trading_pwd">设置支付密码</string>
    <string name="title_modify_trading_pwd">修改支付密码</string>
    <string name="please_set_trading_pwd">请设置交易密码</string>
    <string name="set_trading_pwd_make_money_safe">设置支付密码让资金更安全</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="please_input_set_pwd_again">请再次输入支付密码</string>
    <string name="view_contract">查看合同</string>
    <string name="interest_to_be_collected">预期收益</string>
    <string name="annual_earnings">预期收益率</string>
    <string name="schedule_in_one_month">本月回款</string>
    <string name="schedule_in_three_month">三个月内</string>
    <string name="schedule_after_three_month">三个月后</string>
    <string name="to_be_back_total">待回款金额 (元)</string>
    <string name="to_be_back_date">待回日期</string>
    <string name="current_period">当前/总 (期)</string>
    <string name="novice_envelopes">新手红包</string>
    <string name="verify_real_name">实名认证</string>
    <string name="no_certification">未认证</string>
    <string name="bank_card">银行卡</string>
    <string name="address">地址</string>
    <string name="receive_address">地址</string>
    <string name="project_detail_warm_tips">温馨提示：市场有风险，投资需谨慎</string>
    <string name="detail_address">收货地址</string>
    <string name="save">保存</string>
    <string name="interact">互动</string>
    <string name="integral_mall">积分商城</string>
    <string name="integral_detail">积分明细</string>

    <string name="my_invitation">我的邀请</string>
    <string name="make_money_with_friends">好友和你一起赚钱</string>
    <string name="click_here">利息不够高?点这里</string>
    <string name="wonderful_activity">精彩活动</string>
    <string name="contact_service">电话客服</string>
    <string name="advice_feedback">意见反馈</string>
    <string name="qq_server">QQ客服</string>
    <string name="CALL_PHONE">4000218786</string>
    <string name="CALL_PHONE_WITH_SPLIT">400-021-8786</string>
    <string name="please_fill_in_your_comments_or_suggestions">
        <font size="14">请填写您的意见或建议</font>
    </string>
    <string name="commit">提交</string>
    <string name="please_contact_customer_service">如有问题，请咨询客服热线：400-021-8786</string>
    <string name="please_fill_your_question_or_suggestion">请填写您的意见或建议</string>
    <string name="please_input_your_good_advice">请输入您的宝贵的意见</string>
    <string name="title_winderful">精彩活动</string>
    <string name="title_invest">投资</string>
    <string name="anxin_plan">安心计划</string>
    <string name="sure_invest">确认投资</string>
    <string name="quick_invest">立即投资</string>
    <string name="expected_annualized_return">预期年化收益率</string>
    <string name="project_deadline">项目期限</string>
    <string name="lead_to">回款去向</string>
    <string name="can_cast_the_amount">可投金额</string>
    <string name="available_amount">可用余额:</string>
    <string name="recharge_tip">(先充值再投资)</string>
    <string name="balance_total_vote">余额全投</string>
    <string name="invest_amount">投资金额:</string>
    <string name="use_welfare">使用福利:</string>
    <string name="expected_return">预期收益:</string>
    <string name="boanjie_agreement">《利投网用户协议》</string>
    <string name="regain">重新获取</string>
    <string name="purchase_amount">购买金额</string>
    <string name="discount">红包金额</string>
    <string name="balance_payable">余额需支付</string>
    <string name="confirm_payment">确认支付</string>
    <string name="qi_tou">
        <font size="14">100元起投</font>
    </string>
    <string name="to_account_balance">至账户余额</string>
    <string name="please_input_your_invest_amount">请先输入您的投资金额</string>
    <string name="invest_amount_can_not_great_than_biao_amount">投资金额不可大于可购标的金额</string>
    <string name="progress_in_create_order">创建订单中...</string>
    <string name="progress_in_pay_order">订单支付中...</string>
    <string name="invest_success">投资成功!</string>
    <string name="can_read_in_invest_record">可在投资记录中查看</string>
    <string name="string_invest_success">投标成功！</string>
    <string name="string_invest_failed">投标失败！</string>
    <string name="please_enter_trading_pwd">输入支付密码</string>
    <string name="name">姓名</string>
    <string name="certification_rules">仅限用于银行认证\n为了您的资金安全，投资前必须进行实名验证</string>
    <string name="id_num">身份证号</string>
    <string name="certification_tip">利投网在任何情况下不会泄露个人资料信息</string>
    <string name="certification">认 证</string>
    <string name="bind_bank_card_rule">仅限用于银行认证\nUU理財在任何情况下不会泄露个人资料信息</string>
    <string name="please_input_your_name">
        <font size="14">请输入您的姓名</font>
    </string>
    <string name="please_input_your_id_num">
        <font size="14">请输入您的身份证号</font>
    </string>
    <string name="id_error_please_input_again">您输入的身份证号码格式有误,请检查后重新输入</string>
    <string name="home_bottom_security_safeguard">安全保障</string>
    <string name="home_bottom_information_disclosure">信息披露</string>
    <string name="join_now">立即加入</string>
    <string name="invest_now">立即投标</string>
    <string name="product_introduction">项目介绍</string>
    <string name="product_introduction_with_colon">项目介绍：</string>
    <string name="product_safeguard_with_colon">项目保障：</string>
    <string name="relate_information">相关资料</string>
    <string name="relate_information_with_colon">相关资料：</string>
    <string name="use_of_funds_with_colon">资金用途：</string>
    <string name="source_of_repayment_with_colon">还款来源：</string>
    <string name="warning_please_input_right_phone_num">手机号码格式不正确，请重新输入</string>
    <string name="warning_please_input_right_confirm_code">验证码格式不正确，请重新输入</string>
    <string name="warning_please_input_right_psd">6~16位数字、字母或符号组合</string>
    <string name="warning_please_input_right_old_psd">请输入正确的6~16位密码</string>
    <string name="my_welfare_red_packet">红包</string>
    <string name="my_welfare_ticket">加息券</string>
    <string name="my_invest_detail_project_detail">项目详情</string>
    <string name="cancel">取消</string>
    <string name="personal_date_phopne_num">手机号码</string>
    <string name="gestrue_psd">手势密码</string>
    <string name="feedback">意见反馈</string>
</resources>
