<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".account.IdentificationActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_18"
        android:layout_gravity="center_horizontal"
        android:lineSpacingExtra="6dp"
        android:gravity="center"
        android:textColor="#999999"
        android:textSize="@dimen/sp_14"
        android:text="@string/certification_rules"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_46"
        android:layout_marginTop="@dimen/dp_18"
        android:background="@color/white">
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dp_16"
            android:text="@string/name"
            android:textColor="#333333"
            android:textSize="@dimen/sp_14"/>
        <com.sleep.uulib.widget.DeleteEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:background="@null"
            android:textColorHint="@color/color_dedede"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_alignBaseline="@+id/tv_name"
            android:layout_marginLeft="@dimen/dp_88"
            android:hint="@string/please_input_your_name"
            android:maxLength="10"
            android:textSize="@dimen/sp_14"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:background="@color/line_color"
    />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_46"
        android:background="@color/white">
        <TextView
            android:id="@+id/tv_id_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dp_16"
            android:text="@string/id_num"
            android:textColor="#333333"
            android:textSize="@dimen/sp_14"/>
        <com.sleep.uulib.widget.DeleteEditText
            android:id="@+id/et_id_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:background="@null"
            android:textColorHint="@color/color_dedede"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_alignBaseline="@+id/tv_id_num"
            android:layout_marginLeft="@dimen/dp_88"
            android:hint="@string/please_input_your_id_num"
            android:inputType="text"
            android:textSize="@dimen/sp_14"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/gray"
        android:layout_marginTop="@dimen/dp_16"
        android:gravity="center"
        android:text="@string/certification_tip"/>

    <TextView
        android:id="@+id/tv_identify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_42"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_gray_corner3"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_14"
        android:layout_marginRight="@dimen/dp_14"
        android:gravity="center"
        android:text="@string/certification"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/white" />
</LinearLayout>
