<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_call_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:gravity="center"
            android:text="@string/CALL_PHONE_WITH_SPLIT"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_1"
            android:background="@color/color_969696" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_contact_qq_server"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:gravity="center"
            android:text="@string/qq_server"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_9"
            android:background="@color/color_969696" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
</LinearLayout>