<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/background_color"
    tools:context=".account.LoginStepOneActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_46"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_16"
            android:text="@string/tel_num"
            android:textColor="#333333"
            android:textSize="@dimen/sp_14"/>
        <EditText
            android:id="@+id/et_login_tel_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_14"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@null"
            android:hint="@string/please_input_tel_num"
            android:inputType="number"
            android:maxLength="11"
            android:textSize="@dimen/sp_14"
            android:maxLines="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/bt_next_step"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_46"
        android:layout_marginLeft="@dimen/dp_14"
        android:layout_marginRight="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_28"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:background="@drawable/shape_dark_corner3"
        android:clickable="false"
        android:textSize="@dimen/sp_16"/>
</LinearLayout>
