<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.sleep.uulib.account.ForgetLoginPwdActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_46"
        android:layout_marginTop="@dimen/dp_18"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_16"
            android:text="@string/phone_num"
            android:textColor="#333333"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/et_phone_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_14"
            android:layout_toLeftOf="@id/iv_clearn"
            android:layout_toRightOf="@id/tv_phone_num"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="请输入手机号"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:textColorHint="#DEDEDE"
            android:textSize="@dimen/sp_14" />

        <ImageView
            android:id="@+id/iv_clearn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_18"
            android:src="@mipmap/icon_login_edit_delete_all"
            android:visibility="invisible" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_46"
        android:layout_marginTop="@dimen/dp_18"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_confirm_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_16"
            android:text="@string/confirm_code"
            android:textColor="#333333"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/et_confirm_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBaseline="@+id/tv_confirm_code"
            android:layout_marginLeft="@dimen/dp_14"
            android:layout_marginRight="@dimen/dp_92"
            android:layout_toRightOf="@id/tv_confirm_code"
            android:background="@null"
            android:hint="@string/please_input_confirm_code"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            android:textColorHint="#DEDEDE"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_get_comfirm_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_18"
            android:gravity="center"
            android:minEms="5"
            android:text="获取验证码"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sp_14" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_46"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_new_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_16"
            android:text="@string/new_password"
            android:textColor="#333333"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBaseline="@+id/tv_new_pwd"
            android:layout_marginLeft="@dimen/dp_14"
            android:layout_marginRight="@dimen/dp_48"
            android:layout_toRightOf="@id/tv_new_pwd"
            android:background="@null"
            android:hint="@string/please_input_new_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:textColorHint="@color/color_dedede"
            android:textSize="@dimen/sp_14" />

        <CheckBox
            android:id="@+id/cb_visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_18"
            android:background="@drawable/selector_eyes"
            android:button="@null" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_12"
        android:text="@string/set_pwd_tip"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_12" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_46"
        android:layout_marginLeft="@dimen/dp_14"
        android:layout_marginRight="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_28"
        android:background="@drawable/shape_gray_corner"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/ensure"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />
</LinearLayout>
